src/objects/Work_Order_Template__mdt.object
<CustomObject>
    <description>Work Orders created when the Header Information is passed to the Process Builder. Each Template will be created as a Work Order.</description>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <label>Owner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_ID__c</fullName>
        <label>Record Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Header__c</fullName>
        <label>Work Order Header</label>
        <referenceTo>Work_Order_Header__mdt</referenceTo>
        <relationshipLabel>Work Order Templates</relationshipLabel>
        <relationshipName>Work_Order_Templates</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Work_Order_Number__c</fullName>
        <label>Work Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sequencial</fullName>
                    <default>true</default>
                    <label>Sequencial</label>
                </value>
                <value>
                    <fullName>Parallel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Work Order Template</label>
    <pluralLabel>Work Order Templates</pluralLabel>
</CustomObject>